Implementado pagina de adicionar usuario.

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,9 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "components-font-awesome": "^4.7.0"
+    "components-font-awesome": "^4.7.0",
+    "jquery-validation": "^1.17.0",
+    "jquery.uniform": "^4.2.2",
+    "select2": "~4.0",
   }
 }
