--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "mini-toastr": "^0.6.6",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-2-breadcrumbs": "^0.1.2"
+    "vue-2-breadcrumbs": "^0.1.2",
+    "vue-notifications": "^0.9.0",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
