--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postupdate-deps": "bower update"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "mini-toastr": "^0.6.6",
     "vue": "^2.5.2",
     "vue-2-breadcrumbs": "^0.1.2",
