--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mini-toastr": "^0.6.6",
     "vue": "^2.5.2",
     "vue-2-breadcrumbs": "^0.1.2",
+    "vue-d3-network": "^0.1.22",
     "vue-js-modal": "^1.3.4",
     "vue-notifications": "^0.9.0",
     "vue-resource": "^1.3.4",
